--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,3 +5,4 @@
   <% end %>
 </ul>
 <h3><%= link_to "Create your list", new_list_path %></h3>
+<%= cl_image_tag("kzixiffdhhhxi3m47x1h", width: 400, height: 300, crop: :fill) %>
