bookmarks && css begining

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,17 @@
 // Import page-specific CSS files here.
 @import "home";
+
+body {
+  background-color: rgb(72, 72, 72);
+
+  h1{
+    color: rgb(13, 13, 13);
+    background-color: yellow;
+
+
+
+  }
+
+
+
+}
