Created a navbar added two link that names home and new list

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,10 @@
-.navbar-lewagon {
-  justify-content: space-between;
-  background: white;
-}
+.navbar-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 
-.navbar-lewagon .navbar-collapse {
-  flex-grow: 0;
-}
-
-.navbar-lewagon .navbar-brand img {
-  width: 40px;
+  .navbar-item {
+    margin: 5px;
+  }
 }
