--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -2,15 +2,7 @@
 @import "home";
 
 body {
-  background-color: rgb(72, 72, 72);
-
-  h1{
-    color: rgb(13, 13, 13);
-    background-color: yellow;
-
-
-
-  }
+  background-color: rgba(139, 139, 139, 0.174);
 
 
 
