--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -2,7 +2,6 @@
 <%= simple_form_for(@list) do |f| %>
   <%= f.input :name %>
   <%= f.input :photo, as: :file %>
+  <%= f.association :movies, as: :select %>
   <%= f.submit %>
 <% end %>
-
-<%= link_to "back", lists_path %>
