--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,12 +1,23 @@
-<h1>List</h1>
+<div class="container">
+  <div class="list-information">
+    <div class="list-image">
+      <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
+    </div>
+    <div class="list-name">
+      <h4><%= @list.name %></h4>
+    </div>
+  </div>
+  <div class="list-link">
+    <%= link_to "Update list",  edit_list_path(@list) %>
+    <%= link_to "back", lists_path %>
+  </div>
 
 
-<h4><%= @list.name %></h4>
 
-<%= link_to "Update list",  edit_list_path(@list) %>
 
-<%= link_to "back", lists_path %>
 
-<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 
-<%= link_to "Movie add", new_list_bookmark_path(@list) %>
+
+
+    <%= link_to "Movie add", new_list_bookmark_path(@list) %>
+</div>
