6-Created delete button for delete lists

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -10,3 +10,5 @@
 <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 
 <%= link_to "Movie add", new_list_bookmark_path(@list) %>
+
+<%= link_to "Delete", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
