5-Add the movies show page#5

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -1,14 +1,13 @@
-<h3>bookmarks</h3>
-
-<%= simple_form_for [@list, @bookmark] do |f| %>
-  <%= f.association :movie, as: :select %>
-  <%= f.input :comment %>
-  <%= f.submit "Submit review", class: "btn btn-primary" %>
-<% end %>
 
 
-<% @movies.each_with_index do |movie, index| %>
-  <ul>
-    <li><%= "#{index+1}-#{movie.title}" %></li>
-  </ul>
-<% end %>
+
+<div class="container">
+
+  <%= simple_form_for [@list, @bookmark] do |f| %>
+    <%= f.association :movie, as: :select %>
+    <%= f.input :comment %>
+    <%= f.submit  %>
+  <% end %>
+
+
+</div>
