--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -3,6 +3,21 @@
     <div class="list-image">
       <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
     </div>
+    <div class="movies-list">
+
+  <% @list.movies.each do |movie| %>
+    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+    <li><strong><%= movie.title %></strong></li>
+<% movie.poster_url %>
+
+    <img src= "https://image.tmdb.org/t/p/original/<%= movie.poster_url %>" alt="<% movie.title%>" width="500" height="333">
+    <%= movie.rating %>
+    <small><%= movie.overview %></small>
+    <%= link_to "Remove bookmark", bookmark_path(bookmark[:id]), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %>
+  <% end %>
+
+
+    </div>
     <div class="list-name">
       <h4><%= @list.name %></h4>
     </div>
@@ -17,10 +32,11 @@
 
 
 
+
+
   <%= link_to "Delete", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
 
 
 
-    <%= link_to "Movie add", new_list_bookmark_path(@list) %>
+    <%= link_to "Movie add",  new_list_bookmark_path(@list) %>
 </div>
-
