10- Show page design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 // navbar
 // @import "navbar";
 
-@import "components/card_small"
+@import "components/card_small";
+@import "components/list_show_page"
