--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,42 +1,48 @@
 <div class="container">
   <div class="list-information">
-    <div class="list-image">
-      <%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
-    </div>
-    <div class="movies-list">
-
-  <% @list.movies.each do |movie| %>
-    <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
-    <li><strong><%= movie.title %></strong></li>
-<% movie.poster_url %>
-
-    <img src= "https://image.tmdb.org/t/p/original/<%= movie.poster_url %>" alt="<% movie.title%>" width="500" height="333">
-    <%= movie.rating %>
-    <small><%= movie.overview %></small>
-    <%= link_to "Remove bookmark", bookmark_path(bookmark[:id]), data: { turbo_method: :delete, turbo_confirm: "Are you sure you want to remove #{movie.title} from your #{@list.name} list"}, class: 'text-danger' %>
-  <% end %>
-
-
-    </div>
     <div class="list-name">
-      <h4><%= @list.name %></h4>
+     <h3><%= @list.name %></h3>
+    </div>
+    <div class="list-link">
+      <div class="movie-add button">
+        <%= link_to "Movie Add",  new_list_bookmark_path(@list) %>
+      </div>
+      <div class="update button">
+        <%= link_to "Update List",  edit_list_path(@list) %>
+      </div>
+      <div class="back button">
+        <%= link_to "Back", lists_path %>
+      </div>
+      <div class="delete button">
+        <%= link_to "Delete", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
+      </div>
     </div>
   </div>
-  <div class="list-link">
-    <%= link_to "Update list",  edit_list_path(@list) %>
-    <%= link_to "back", lists_path %>
+  <div class="movies-list">
+
+    <% @list.movies.each do |movie| %>
+      <% bookmark = Bookmark.find_by(list: @list, movie: movie) %>
+      <div class="film-poster">
+        <div class="back">
+          <div class="title">
+            <%= movie.title %>
+          </div>
+          <div class="raiting">
+            <%= "Raiting:#{movie.rating}" %>
+          </div>
+          <div class="overview">
+            <p><%= movie.overview %></p>
+          </div>
+          <div class="movie button">
+            <%= link_to "See more", lists_path %>
+          </div>
+        </div>
+        <div class="front">
+          <img src= "https://image.tmdb.org/t/p/original/<%= movie.poster_url %>" alt="<% movie.title%>" width="133" height="250">
+        </div>
+      </div>
+    <% end %>
+
   </div>
 
-
-
-
-
-
-
-
-  <%= link_to "Delete", list_path(@list), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"} %>
-
-
-
-    <%= link_to "Movie add",  new_list_bookmark_path(@list) %>
 </div>
