--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,32 @@
-.navbar-container {
+.navbar {
+  margin-top: 0px;
+  padding-top: 0px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
+
+}
+
+.navbar-link {
+  display: flex;
   flex-direction: row;
 
-  .navbar-item {
-    margin: 5px;
-  }
+}
+
+.navbar-item {
+  margin: 5px;
+}
+
+.logo {
+
+  width: 120px;
+  height: 80px;
+  border-radius: 3px;
+  margin-left: 10px;
+
+}
+
+.navbar-item {
+  margin: 5px;
+  margin-left: 10px;
+  color: black;
 }
