--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,26 +7,17 @@
 
     <div class="navbar-link">
       <div class="navbar-item">
-        <%= link_to lists_path do %>
-          <i class="fa-solid fa-house"></i>
-        <% end %>
+        <%= link_to "Home", lists_path  %>
       </div>
       <div class="navbar-item">
-        <%= link_to new_list_path do %>
-          <i class="fa-light fa-plus"></i>
-        <% end %>
+        <%= link_to "New Category", new_list_path %>
       </div>
       <div class="navbar-item">
-        <%= link_to lists_path do %>
-          <i class="fa-solid fa-film"></i>
-        <% end %>
+        <%= link_to "Movies", lists_path %>
       </div>
       <div class="navbar-item">
-        <%= link_to lists_path do %>
-          <i class="fa-solid fa-address-book"></i>
-        <% end %>
+        <%= link_to "Contact", lists_path %>
       </div>
-
     </div>
   </div>
 </div>
